log
Mon, Apr 14, 2025 10:28:16 AM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Mon, Apr 14, 2025 10:31:54 AM: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
a4c77ae
Mon, Apr 14, 2025 10:32:26 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
d05efa5
Mon, Apr 14, 2025 10:33:07 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
bc2f5b9
Mon, Apr 14, 2025 10:34:21 AM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:60:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     mapa->buckets = par ;
                   ^
cc1.exe: all warnings being treated as errors
80a3413
Mon, Apr 14, 2025 10:34:31 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
53ae5a0
Mon, Apr 14, 2025 10:35:21 AM: 
 hashmap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|0
d645dc0
Mon, Apr 14, 2025 10:36:55 AM: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:60:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     mapa->buckets = par ;
                   ^
cc1.exe: all warnings being treated as errors
dbd0365
Mon, Apr 14, 2025 10:38:24 AM: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
01031a4
Mon, Apr 14, 2025 10:38:43 AM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e2bfafc
